--- a/app/Makefile
+++ b/app/Makefile
@@ -1,2 +1,16 @@
+# запустить исполняемый файл app с опцией -h
+help:
+	./build/install/app/bin/app -h
+
+# запустить исполняемый файл app с опцией -V
+version:
+	./build/install/app/bin/app -V
+
+# запустить исполняемый файл app с двумя параметрами
 run-dist:
-	./build/install/app/bin/app
+	./build/install/app/bin/app src/test/resources/JsonS/Json1.json src/test/resources/JsonS/Json2.json
+
+build:
+
+
+.PHONY: buildbuild/install/app/bin/app
