--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           gradle-version: 8.7
       - name: Build
-        run: make build
+      - run: make build
       - name: Run
       - run: make run-dist
       # - name: Publish code coverage
