--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,9 @@ jobs:
       - uses: gradle/gradle-build-action@v3
         with:
           gradle-version: 8.7
-      - name: Build
       - run: make build
-      - name: Run
-      - run: make run-dist
+      - run: make lint
+      - run: make test
       # - name: Publish code coverage
       #   uses: paambaati/codeclimate-action@v5.0.0
       #   env:
