--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - run: make lint
       - run: make test
       - name: Set execute permissions for cc-test-reporter
-        run: chmod +x ./app/cc-test-reporter
+        run: cd app/ chmod +x ./app/cc-test-reporter
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v5.0.0
         env:
